--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Assignment</string>
-
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_search">SearchActivity</string>
     <string name="title_activity_locations">LocationsActivity</string>
     <string name="title_activity_specific_location">SpecificLocationActivity</string>
+    <string name="title_activity_profile_activity">ProfileActivity</string>
 </resources>
